--- a/PipingSystem.csproj
+++ b/PipingSystem.csproj
@@ -131,6 +131,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Resources\data.db" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
